pods/step3/dev-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: dev # <-- We're putting this in the 'dev' namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-dev
  template:
    metadata:
      labels:
        app: my-app-dev
    spec:
      containers:
      - name: nginx
        image: nginx
