pods/step3/prod-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: prod # <-- This one is in 'prod'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-prod
  template:
    metadata:
      labels:
        app: my-app-prod # <-- A different label for the selector
    spec:
      containers:
      - name: nginx
        image: nginx
